2002-06-26  David Gravereaux <davygrvy@pobox.com>

	* example/weather: Updated script to use rainmaker.wunderground.com
	instead of cirrus.sprl.umich.edu.  The old service is closed.
	Added Larry Virden's notes about how rainmaker needs reverse DNS
	from the peer making the connection or no data can retrieved.
	This appears to be a blind error condition.

2002-06-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exp_main_tk.c: #ifdef'd definition of "matherr". This hack is
	  not required for 8.4 anymore. But still for 8.3.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exp_main_sub.c: Fixed typo in merge of #459646. Thanks to Hemang Lavana.

 	* exp_log.c (expStdoutLogU): Merged fix for SF Bug #513382 into
	  the HEAD (The source of the patch is "expect-sf418892-sf439042-branch").

	  Use Tcl_WriteChars/Tcl_Flush instead of 'fwrite' for tcl 8.1 and
	  beyond to enforce correct conversion of the internal UTF/8 into
	  the external representation.

	* Merged fix for SF Bug #459646 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

	* Merged fix for SF Bug #439042 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

	* Merged fix for SF Bug #418892 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

2002-03-23  Don Libes  <libes@users.sourceforge.net>

	* Andreas Kupries mods to provide CONST support per TIP 27 (Fixed
	  SF Patch #525074).

2002-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.c: Applied patch by Don Libes fixing improper
	  internationalization.

2002-02-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.man: Changed the paragraph about [exp_continue] to
	  contain information about the flag "-continue_timer". This fixes
	  the bug SF #520630.

2002-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
